FAI-628: Refactor use of TypedValue/TypedVariable (#1061)
* FAI-628: Refactor use of TypedValue/TypedVariable

* Preliminary updates following peer review.

* Updates following feedback from danielezonca

* Updates following feedback from kelvah

* Fixed reflection configuration.

* More native fun.

Co-authored-by: Michael Anstis <manstis@redhat.com>